# page-analyzer

./: .gitignore  Dockerfile  Makefile  README.md  build.sh  database.sql  docker-compose.yml  pyproject.toml
.github/workflows/: main.yml
page_analyzer/: __init__.py  app.py  config.py  constants.py
page_analyzer/src/: db.py  from_db.py  logger.py  parser.py  website.py
page_analyzer/templates/: index.html  layout.html  list_sites.html  site.html
